--- a/mindex22.html
+++ b/mindex22.html
@@ -340,7 +340,7 @@
             margin: 10px;
             padding: 15px 30px;
             font-size: 20px;
-            background-color: green; /* #DB3C30 */
+            background-color: #DB3C30;
             color: white;
             border: none;
             border-radius: 5px;
