--- a/mindex22.html
+++ b/mindex22.html
@@ -683,7 +683,7 @@
                     <ol>
                         <li>Нажмите кнопку «Начать игру»</li>
                         <li>Прочитайте слоган и выберите бренд</li>
-                        <li>Смахните неправильные ответы с экрана</li>
+                        <li>Смахните или тапните неправильные ответы</li>
                         <li>Следите за временем, у вас 3 попытки</li>
                     </ol>
                 `;
