--- a/mindex22.html
+++ b/mindex22.html
@@ -1462,6 +1462,15 @@
                 ]
             },
             {
+                question: "Мы заботимся о вас",
+                answers: [
+                    { text: "Tefal", correct: true, image: "images/tefal4.jpg" },				
+                    { text: "LG", correct: false, image: "images/lg4.jpg" },
+                    { text: "Philips", correct: false, image: "images/philips4.jpg" },
+                    { text: "Braun", correct: false, image: "images/braun4.jpg" }
+                ]
+            },
+            {
                 question: "Изменим жизнь к лучшему",
                 answers: [
                     { text: "Philips", correct: true, image: "images/philips3.jpg" },				
