--- a/pic/splash.html
+++ b/pic/splash.html
@@ -42,7 +42,7 @@
                 splashImage.onload = function () {
                     splashImage.style.display = 'block'; // Показываем изображение
                 };
-                splashImage.src = 'pic/splash.jpg'; // Загружаем изображение
+                splashImage.src = 'splash.jpg'; // Загружаем изображение
             }
         };
     </script>
