--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </style>
 </head>
 <body>  <!-- Заставка в iframe -->
-		<iframe id="splashFrame" src="pic/splash.html" style="width: 100%; height: 100%; border: none; position: fixed; top: 0; left: 0; z-index: 1999;"></iframe>
+		<iframe id="splashFrame" src="splash.html" style="width: 100%; height: 100%; border: none; position: fixed; top: 0; left: 0; z-index: 1999;"></iframe>
 		<script>
 			// Удаляем iframe с заставкой через 8 секунд и показываем меню
 			setTimeout(() => {
