--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
     </div>
 
     <!-- Звуковые эффекты (только OGG) -->
-    <audio id="shootSound" src="audio/shoot.ogg"></audio>
-    <audio id="explosionSound" src="audio/explosion.ogg"></audio>
-    <audio id="backgroundMusic" src="audio/background.ogg" loop></audio>
-    <audio id="hitSound" src="audio/hit.ogg"></audio>
-    <audio id="infantryHitSound1" src="audio/infantry_hit1.ogg"></audio>
-    <audio id="infantryHitSound2" src="audio/infantry_hit2.ogg"></audio>
-    <audio id="infantryHitSound3" src="audio/infantry_hit3.ogg"></audio>
-    <audio id="defeatSound" src="audio/defeat.ogg"></audio>
+    <audio id="shootSound" src="soundtrack/shoot.ogg"></audio>
+    <audio id="explosionSound" src="soundtrack/explosion.ogg"></audio>
+    <audio id="backgroundMusic" src="soundtrack/background.ogg" loop></audio>
+    <audio id="hitSound" src="soundtrack/hit.ogg"></audio>
+    <audio id="infantryHitSound1" src="soundtrack/infantry_hit1.ogg"></audio>
+    <audio id="infantryHitSound2" src="soundtrack/infantry_hit2.ogg"></audio>
+    <audio id="infantryHitSound3" src="soundtrack/infantry_hit3.ogg"></audio>
+    <audio id="defeatSound" src="soundtrack/defeat.ogg"></audio>
 
     <script>
         const canvas = document.getElementById('gameCanvas');
